--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.skyscreamer:jsonassert')
 }
 
 
