Added health endopoint for the application
[#118780881] System should check when targeting API to ensure target is valid API

Signed-off-by: Weyman Fung <wfung@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-hateoas')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-actuator')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.skyscreamer:jsonassert')
 }
@@ -44,4 +45,20 @@ eclipse {
 
 task wrapper(type: Wrapper) {
 	gradleVersion = '2.12'
+}
+
+sourceSets {
+	integrationTest {
+		java {
+			compileClasspath += main.output + test.output
+			runtimeClasspath += main.output + test.output
+			srcDir file('src/it/java')
+		}
+		resources.srcDir file('src/it/resources')
+	}
+}
+
+configurations {
+	integrationTestCompile.extendsFrom testCompile
+	integrationTestRuntime.extendsFrom testRuntime
 }
