--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.owasp:dependency-check-gradle:1.3.6")
     }
 }
 
@@ -14,6 +15,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
+apply plugin: 'org.owasp.dependencycheck'
 apply plugin: 'jacoco'
 apply plugin: 'checkstyle'
 
@@ -97,3 +99,4 @@ tasks.withType(Checkstyle) {
 }
 
 tasks.check.dependsOn tasks.jacocoTestReport
+tasks.check.dependsOn tasks.dependencyCheck
