Return error message strings in addition to error status codes
[#119772789] User should receive error if all char type params are set to false

Signed-off-by: Philip Kuryloski <pkuryloski@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ local.properties
 
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+/classes/
 
 # Java annotation processor (APT)
 .factorypath
