Use h2 instead of a HashMap as our secret store
So that we can have faster tests by using transactions to avoid
polluting the store, instead of rebuilding the Context with
@DirtiesContext.

[finishes #120780153] In Memory DB

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-actuator')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.passay:passay:1.1.0')
+    compile('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.skyscreamer:jsonassert')
 }
