Refactor to use JsonPath instead of Jackson mapping
- allows for easier implementation of multiple "set" endpoints
- add JsonPath to gradle

[#120018551] User should be able to set static values for credential type 'certificate'

Signed-off-by: Philip Kuryloski <pkuryloski@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.passay:passay:1.1.0')
     compile('com.h2database:h2')
+    compile('com.jayway.jsonpath:json-path:2.2.0')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.skyscreamer:jsonassert')
     testCompile('com.greghaskins:spectrum:0.6.1')
