--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,18 @@ repositories {
     jcenter()
 }
 
+sourceSets {
+    integrationTest {
+        java {
+            srcDir file('src/integration-test/java')
+        }
+        resources.srcDir file('src/integration-test/resources')
+    }
+}
+
+configurations {
+    integrationTestCompile.extendsFrom testCompile
+}
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-hateoas')
@@ -58,6 +70,12 @@ eclipse {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.12'
+}
+
+task integrationTest(type: Test) {
+    testClassesDir = sourceSets.integrationTest.output.classesDir
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    outputs.upToDateWhen { false }
 }
 
 jacoco {
@@ -93,5 +111,12 @@ tasks.withType(Checkstyle) {
     }
 }
 
+tasks.withType(Test) {
+    reports.html.destination = file("${reporting.baseDir}/${name}")
+}
+
 tasks.check.dependsOn tasks.jacocoTestReport
 tasks.check.dependsOn tasks.dependencyCheck
+tasks.check.dependsOn tasks.integrationTest
+tasks.integrationTest.dependsOn tasks.assemble
+tasks.integrationTest.mustRunAfter tasks.test
