--- a/manifest.yml
+++ b/manifest.yml
@@ -2,4 +2,4 @@
 applications:
   - name: pivotal-credential-manager
     buildpack: java_buildpack
-    path: build/libs/sec-eng-credential-manager-0.0.1-SNAPSHOT.jar
+    path: build/libs/sec-eng-credential-manager-0.1.0.jar
