--- a/build.gradle
+++ b/build.gradle
@@ -126,5 +126,6 @@ tasks.withType(Test) {
 
 tasks.check.dependsOn tasks.jacocoTestReport
 tasks.check.dependsOn tasks.dependencyCheck
+tasks.check.dependsOn tasks.integrationTest
 tasks.integrationTest.dependsOn tasks.assemble
 tasks.integrationTest.mustRunAfter tasks.test
