--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,8 @@ dependencies {
     compile('com.h2database:h2')
     compile('com.jayway.jsonpath:json-path:2.2.0')
     compile('org.bouncycastle:bcpkix-jdk15on:1.52')
-    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile(group: 'com.google.guava', name: 'guava', version: '19.0')
+    compile('org.apache.commons:commons-lang3:3.4')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.skyscreamer:jsonassert')
     testCompile('com.greghaskins:spectrum:0.6.1')
