--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 info.app.name=Pivotal Credential Manager
-info.app.version=@build.version@ build @build.number@
+info.app.version=${buildVersion}
 endpoints.info.enabled=true
 endpoints.health.enabled=true
 # disable other default endpoints http://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html
