add 'client' property to auth-server configuration
[#118221643] CLI user should be able to authenticate

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ jacocoTestReport {
 bootRun {
     addResources = true
     systemProperties["auth-server.url"] = System.getProperty("auth-server.url", "https://uaa.run.pivotal.io")
+    systemProperties["auth-server.client"] = System.getProperty("auth-server.client", "credhub")
 }
 
 test {
@@ -97,6 +98,7 @@ test {
         classDumpFile = file("$buildDir/jacoco/classpathdumps")
     }
     systemProperties["auth-server.url"] = "https://uaa.run.pivotal.io"
+    systemProperties["auth-server.client"] = "credhub"
 }
 
 tasks.withType(Test) {
