--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -1,2 +1,3 @@
 # This is a temporary valid UAA such that we can deploy the partial story #118221643
 auth-server.url=https://uaa.run.pivotal.io
+auth-server.client=credhub
