--- a/build.gradle
+++ b/build.gradle
@@ -39,15 +39,18 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-actuator')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.security.oauth:spring-security-oauth2')
+    compile('org.springframework.security:spring-security-jwt')
     compile('org.passay:passay:1.1.0')
     compile('com.h2database:h2')
     compile('com.jayway.jsonpath:json-path:2.2.0')
     compile('org.bouncycastle:bcpkix-jdk15on:1.52')
-    compile(group: 'com.google.guava', name: 'guava', version: '19.0')
+    compile('com.google.guava:guava:19.0')
     compile('org.apache.commons:commons-lang3:3.4')
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.5'
-    compile 'org.exparity:hamcrest-bean:1.0.11'
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.5')
+    compile('org.exparity:hamcrest-bean:1.0.11')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.skyscreamer:jsonassert')
     testCompile('com.greghaskins:spectrum:0.6.1')
