--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,10 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-actuator')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.security.oauth:spring-security-oauth2')
+    compile('org.springframework.security:spring-security-jwt')
     compile('org.passay:passay:1.1.0')
     compile('com.h2database:h2')
     compile('com.jayway.jsonpath:json-path:2.2.0')
