Add missing gradle config for running tests
with new application-dev.yml

[finishes #118222529] CredHub should require all requests to be from authenticated users

Signed-off-by: Philip Kuryloski <pkuryloski@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -100,8 +100,7 @@ test {
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpFile = file("$buildDir/jacoco/classpathdumps")
     }
-    systemProperties["auth-server.url"] = "https://uaa.run.pivotal.io"
-    systemProperties["data-storage.type"] = "in-memory"
+    systemProperties["spring.profiles.active"] = "dev"
 }
 
 tasks.withType(Test) {
