wip - get from token; SecurityConfigurationTest fails
[#124008491] Auditor should see a log for each time a credential is set

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ bootRun {
     addResources = true
     systemProperties["auth-server.url"] = System.getProperty("auth-server.url", "http://localhost:8080/uaa")
     systemProperties["data-storage.type"] = System.getProperty("data-storage.type", "in-memory")
+    systemProperties["spring.profiles.active"]  = System.getProperty("spring.properties.active", "dev")
 }
 
 test {
