--- a/build.gradle
+++ b/build.gradle
@@ -90,8 +90,7 @@ jacocoTestReport {
 
 bootRun {
     addResources = true
-    systemProperties["auth-server.url"] = System.getProperty("auth-server.url", "http://localhost:8080/uaa")
-    systemProperties["data-storage.type"] = System.getProperty("data-storage.type", "in-memory")
+    systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "dev")
 }
 
 test {
