Add postgres db support and dynamically interpret
-db type in application

[#118801575] User should be able to deploy CM with configuration for in-memory database

Signed-off-by: Nitya Dhanushkodi <ndhanushkodi@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,14 @@ auth-server:
   url: https://50.17.59.67:8443
 
 data-storage:
-  type: in-memory
+  type: postgres
+  username: pivotal
+  password:
+
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
 
 security:
   oauth2:
