--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile('org.apache.commons:commons-lang3:3.4')
     compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.5')
     compile('org.exparity:hamcrest-bean:1.0.11')
+    compile('org.postgresql:postgresql:9.3-1100-jdbc4')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.skyscreamer:jsonassert')
     testCompile('com.greghaskins:spectrum:0.6.1')
