--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.5')
     compile('org.exparity:hamcrest-bean:1.0.11')
     compile('org.postgresql:postgresql:9.3-1100-jdbc4')
+    compile('mysql:mysql-connector-java:5.1.38')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.skyscreamer:jsonassert')
     testCompile('com.greghaskins:spectrum:0.6.1')
