use interceptor to add audit logging and transactions
- change default dev to run in-memory db

[#124008491] Auditor should see a log for each time a credential is set

Signed-off-by: Philip Kuryloski <pkuryloski@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ auth-server:
   url: https://50.17.59.67:8443
 
 data-storage:
-  type: postgres
+  type: in-memory
   username: pivotal
   password:
 
