--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,20 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        maven { url 'http://repo.spring.io/plugins-release' }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.owasp:dependency-check-gradle:1.3.6")
+        classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
     }
+}
+
+configure(allprojects) {
+    apply plugin: 'propdeps'
+    apply plugin: 'propdeps-maven'
+    apply plugin: 'propdeps-idea'
+    apply plugin: 'propdeps-eclipse'
 }
 
 apply plugin: 'java'
@@ -55,6 +64,7 @@ dependencies {
     testCompile('org.skyscreamer:jsonassert')
     testCompile('com.greghaskins:spectrum:0.7.0')
     testCompile('org.apache.commons:commons-lang3:3.4')
+    optional "org.springframework.boot:spring-boot-configuration-processor"
 }
 
 
