Fix broken tests in NamedSecretTest
-- use @Transactional and autoTransactional() to undo tests that write to db
-- unset storage URL property (should be in-memory by default in testing)

[#123996531] User should receive error if storage credentials are incorrect

Signed-off-by: Larry Hamel <lhamel@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     username: pivotal
     password:
-    url: jdbc:postgresql://localhost:5432/credhub
+    # url: jdbc:postgresql://localhost:5432/credhub
 
 security:
   oauth2:
