Encrypt value when credential value is overwritten
- Moved encryption/decryption operations to entity
- Move encrypted_value column to NamedSecret to be inherited
- Rename InMemoryAuthorityRepository to CertificateAuthorityRepository

[#126806673] Value credentials should be encrypted in storage

Signed-off-by: Larry Hamel <lhamel@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ hsm:
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
   datasource:
     username: pivotal
     password:
