Use a docker image with gradle
for gradle based tasks

[#127768129] Add gradle to the docker image used for gradle based tasks

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/ci/tasks/owasp-check/task.yml
+++ b/ci/tasks/owasp-check/task.yml
@@ -1,11 +1,20 @@
 ---
 platform: linux
-image: docker:///pcfseceng/sec-eng-ci
+
+image_resource:
+  type: docker-image
+  source:
+    repository: frekele/gradle
+    tag: '2.12-jdk8'
+
 inputs:
   - name: sec-eng-credential-manager
+
 outputs:
   - name: check-report-output
+
 run:
   path: sec-eng-credential-manager/ci/tasks/owasp-check/task.sh
+
 params:
   OUTPUT_PATH: check-report-output
