--- a/ci/tasks/unit-tests/task.yml
+++ b/ci/tasks/unit-tests/task.yml
@@ -1,7 +1,14 @@
 ---
 platform: linux
-image: docker:///pcfseceng/sec-eng-ci
+
+image_resource:
+  type: docker-image
+  source:
+    repository: frekele/gradle
+    tag: '2.12-jdk8'
+
 inputs:
   - name: sec-eng-credential-manager
+
 run:
   path: sec-eng-credential-manager/ci/tasks/unit-tests/task.sh
