--- a/build.gradle
+++ b/build.gradle
@@ -45,11 +45,19 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.security.oauth:spring-security-oauth2')
-    compile('org.springframework.security:spring-security-jwt')
+    [
+            'org.springframework.boot:spring-boot-starter-web',
+            'org.springframework.boot:spring-boot-starter-security',
+            'org.springframework.boot:spring-boot-starter-data-jpa',
+            'org.springframework.security.oauth:spring-security-oauth2',
+            'org.springframework.security:spring-security-jwt'
+    ].each { dep ->
+        compile(dep) {
+            exclude module: "spring-boot-starter-logging"
+            exclude module: "logback-classic"
+        }
+    }
+    compile("org.springframework.boot:spring-boot-starter-log4j2")
     compile('org.passay:passay:1.1.0')
     compile('com.h2database:h2')
     compile('com.jayway.jsonpath:json-path:2.2.0')
