Make Flyway work with in-memory H2 database
both for app server (dev profile) and for tests (unit-test profile)

[#128604343] User should be able to install new version of CredHub with existing database

Signed-off-by: Rick Kawala <rkawala@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     compile('org.exparity:hamcrest-bean:1.0.11')
     compile('org.postgresql:postgresql:9.3-1100-jdbc4')
     compile('mysql:mysql-connector-java:5.1.38')
+    compile("org.flywaydb:flyway-core:4.0.3")
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.skyscreamer:jsonassert')
     testCompile('com.jayway.jsonpath:json-path-assert:2.2.0')
