--- a/src/main/resources/application-unit-test.yml
+++ b/src/main/resources/application-unit-test.yml
@@ -5,11 +5,11 @@ hsm:
   disabled: true
 
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: update
   datasource:
     url: jdbc:h2:mem:credhub
+
+flyway:
+  locations:classpath:/db/migration/common,classpath:/db/migration/h2
 
 security:
   oauth2:
