--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.palantir.git-version' version '0.5.2'
+}
+
 configure(allprojects) {
     apply plugin: 'propdeps'
     apply plugin: 'propdeps-maven'
@@ -29,7 +33,8 @@ apply plugin: 'jacoco'
 
 jar {
     baseName = 'sec-eng-credential-manager'
-    version = '0.1.0'
+    version = '0.2.0'
+    classifier = project.gitVersion()
 }
 
 ext {
