--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ apply plugin: 'jacoco'
 
 jar {
     baseName = 'sec-eng-credential-manager'
-    version = '0.2.0'
+    version = "${System.getenv("VERSION") ?: "DEV"}"
 }
 
 ext {
