Fix the app name and remove the banner
Signed-off-by: Philip Kuryloski <pkuryloski@pivotal.io>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 info:
   app:
-    name: Pivotal Credential Manager
+    name: CredHub for PCF
     version: ${buildVersion}
+
 security:
   oauth2:
     resource:
