Improve the ci SNR
[#131209411] Show failed tests in gradle tasks in ci

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,10 @@ test {
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
         classDumpFile = file("$buildDir/jacoco/classpathdumps")
     }
+    testLogging {
+        events 'passed', 'failed', 'skipped'
+        exceptionFormat 'full'
+    }
 }
 
 tasks.withType(Test) {
