Add helpful comments
[#130061349] Users should be able to find all paths

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,11 +7,16 @@ encryption:
 
 spring:
   datasource:
+    # postgres/h2
     username: pivotal
+    # mysql
+#    username: root
     password:
 #    url: jdbc:postgresql://localhost:5432/credhub
+#    url: jdbc:mysql://localhost:3306/credhub
 
 flyway:
+  # last value is either postgres/h2/mysql
   locations: classpath:/db/migration/common,classpath:/db/migration/h2
 
 security:
