Removed path column in favor of in-memory approach
[finishes #130061349] Users should be able to find all paths

Signed-off-by: Philip Kuryloski <pkuryloski@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ spring:
 
 flyway:
   # last value is either postgres/h2/mysql
-  locations: classpath:/db/migration/common,classpath:/db/migration/h2
+  locations: classpath:/db/migration/h2
 
 security:
   oauth2:
