User should be able to generate an RSA key pair credential.
[#130857987] User should be able to generate RSA key pair credential

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,12 +12,12 @@ spring:
     # mysql
 #    username: root
     password:
-#    url: jdbc:postgresql://localhost:5432/credhub
+    url: jdbc:postgresql://localhost:5432/credhub
 #    url: jdbc:mysql://localhost:3306/credhub
 
 flyway:
   # last value is either postgres/h2/mysql
-  locations: classpath:/db/migration/h2
+  locations: classpath:/db/migration/postgres
 
 security:
   oauth2:
