Trying a different way to pass environment variables through the task
[#131599351] for 'find all paths' run automated migration test against mysql and postgres

Signed-off-by: Sebastian Wittenkamp <swittenkamp@pivotal.io>

--- a/ci/tasks/unit-tests/task.yml
+++ b/ci/tasks/unit-tests/task.yml
@@ -12,3 +12,6 @@ inputs:
 
 run:
   path: sec-eng-credential-manager/ci/tasks/unit-tests/task.sh
+
+params:
+  DATABASE_PROFILE: {{DATABASE_PROFILE}}
