Update unit-tests ci task to create mysql/postgres dbs
- also add purging of the database connections to SpectrumHelper

[#131599351] for 'find all paths' run automated migration test against mysql and postgres

Signed-off-by: Phil Goodwin <pgoodwin@pivotal.io>

--- a/src/test/resources/application-unit-test-mysql.yml
+++ b/src/test/resources/application-unit-test-mysql.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: root
-    url: jdbc:mysql://localhost:3306/credhub
+    url: jdbc:mysql://localhost:3306/credhub_test
 
 flyway:
   locations: classpath:/db/migration/mysql
