--- a/ci/tasks/unit-tests/task.yml
+++ b/ci/tasks/unit-tests/task.yml
@@ -4,11 +4,13 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: frekele/gradle
-    tag: '3.1-jdk8'
+    repository: pcfseceng/credhub-unit-tests
 
 inputs:
   - name: sec-eng-credential-manager
 
 run:
   path: sec-eng-credential-manager/ci/tasks/unit-tests/task.sh
+
+params:
+  DATABASE_PROFILE:
