--- a/src/test/resources/application-unit-test-postgres.yml
+++ b/src/test/resources/application-unit-test-postgres.yml
@@ -1,7 +1,11 @@
 spring:
   datasource:
-    username: pivotal
-    url: jdbc:postgresql://localhost:5432/credhub
+    username: root
+    password: root
+    url: jdbc:postgresql://localhost:5432/credhub_test
+    tomcat:
+      max-active: 20
+      max-idle: 10
 
 flyway:
   locations: classpath:/db/migration/postgres
