Change from a sql migration to a java one
- to make sure we are generating v4 uuids

[#133706515] Existing CAs have null uuid in the database

Signed-off-by: Stu Pollock <spollock@pivotal.io>

--- a/src/test/resources/application-unit-test-postgres.yml
+++ b/src/test/resources/application-unit-test-postgres.yml
@@ -8,4 +8,4 @@ spring:
       max-idle: 10
 
 flyway:
-  locations: classpath:/db/migration/postgres
+  locations: classpath:/db/migration/common,classpath:/db/migration/postgres
