--- a/src/test/resources/application-unit-test-mysql.yml
+++ b/src/test/resources/application-unit-test-mysql.yml
@@ -4,4 +4,4 @@ spring:
     url: jdbc:mysql://localhost:3306/credhub_test
 
 flyway:
-  locations: classpath:/db/migration/mysql
+  locations: classpath:/db/migration/common,classpath:/db/migration/mysql
