--- a/src/test/resources/application-unit-test.yml
+++ b/src/test/resources/application-unit-test.yml
@@ -4,6 +4,9 @@ auth-server:
 encryption:
   provider: dev_internal
   active-key: D673ACD01DA091B08144FBC8C0B5F524
+  keys:
+    - D673ACD01DA091B08144FBC8C0B5F524
+    - A673ACF01DB091B08133FBC8C0B5F555
 
 security:
   oauth2:
