The encryption.keys array now supports HSM and DSM.
- active-key is gone, it is now active: true on one key in the keys
  array.
- non-dev-keys have encryption-key-name.
- dsm top-level key is gone.
- hsm top-level key no longer contains active-key-name.
- extracted connection classes for HSM and DSM to isolate
  provider-specific behavior.

[#132128639] User should be able to rotate HSM encryption key

Signed-off-by: Phil Goodwin <pgoodwin@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,10 +3,10 @@ auth-server:
 
 encryption:
   provider: dev_internal
-  active-key: D673ACD01DA091B08144FBC8C0B5F524
   keys:
-    - D673ACD01DA091B08144FBC8C0B5F524
-    - A673ACF01DB091B08133FBC8C0B5F555
+  - dev-key: D673ACD01DA091B08144FBC8C0B5F524
+    active: true
+  - dev-key: A673ACF01DB091B08133FBC8C0B5F555
 
 spring:
   datasource:
