Ensure default user password is not logged
[#140174145] Default basic auth user's password gets logged

Signed-off-by: Phil Goodwin <pgoodwin@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -39,3 +39,6 @@ security:
 
 server:
   port: 9000
+
+logging:
+  config: /Users/pivotal/workspace/credhub-release/src/credhub/src/main/resources/log4j2.properties
