--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
 #    username: root
     password:
 #    url: jdbc:postgresql://localhost:5432/credhub
-#    url: jdbc:mysql://localhost:3306/credhub
+#    url: jdbc:mariadb://localhost:3306/credhub
 
 flyway:
   # last value is either postgres/h2/mysql
