Use a dummy auth-server url
[#140147665] application-unit-test.yml in public repo points to pipeline UAA

--- a/src/test/resources/application-unit-test.yml
+++ b/src/test/resources/application-unit-test.yml
@@ -3,7 +3,7 @@ info:
     version: unit-test-version
 
 auth-server:
-  url: https://50.17.59.67:8443
+  url: https://example.com:8443
 
 encryption:
   provider: dev_internal
