--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,9 @@
-import org.gradle.api.Task
-import org.gradle.api.tasks.testing.Test
-import org.gradle.api.tasks.wrapper.Wrapper
-import org.gradle.api.reporting.ReportingExtension
-import org.gradle.jvm.tasks.Jar
-import org.gradle.language.jvm.tasks.ProcessResources
-import org.gradle.testing.jacoco.plugins.JacocoPluginExtension
-import org.gradle.testing.jacoco.plugins.JacocoTaskExtension
-import org.gradle.testing.jacoco.tasks.JacocoReport
-import org.springframework.boot.gradle.run.BootRunTask
 
 buildscript {
     repositories {
         mavenCentral()
-        maven { setUrl("http://repo.spring.io/plugins-release") }
-        maven { setUrl("https://plugins.gradle.org/m2/") }
+        maven { url("http://repo.spring.io/plugins-release") }
+        maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.4.RELEASE")
