Enable mTLS authentication
* Adds script to set up TLS key store and mTLS trust store, as well as
relevant certs, for development (ONLY - NOT used in production)
* Development script `start_server.sh` will use script to set up
TLS/mTLS if they aren't yet set up
* Audit logs now contain dummy values in lieu of OAuth2 information if
user is authenticated with mTLS

[#138283045] User should be able to configure CredHub to allow MTLS for authentication

Signed-off-by: Sebastian Wittenkamp <swittenkamp@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,11 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# Ignore certificates and keys used in development
+*.crt
+*.csr
+*.p12
+
+# Ignore any key stores
+*.jks
