Allow users to specify password rather than hex key
This makes manifest writing more human friendly and follow the
established CF pattern for determining encryption keys.

Signed-off-by: Phil Goodwin <pgoodwin@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,7 +9,7 @@ encryption:
   - dev-key: D673ACD01DA091B08144FBC8C0B5F524
     active: true
   - dev-key: A673ACF01DB091B08133FBC8C0B5F555
-
+  - encryption-password: correcthorsebatterystaple
 security:
   oauth2:
     resource:
