Switch credhub to credhub_dev for local db name.
[#137286339] Switch unit-tests and dev machines to use mariadb

--- a/src/main/resources/application-dev-postgres.yml
+++ b/src/main/resources/application-dev-postgres.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: pivotal
     password:
-    url: jdbc:postgresql://localhost:5432/credhub
+    url: jdbc:postgresql://localhost:5432/credhub_dev
   profiles:
     include: dev
 
