--- a/src/main/resources/application-dev-mysql.yml
+++ b/src/main/resources/application-dev-mysql.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password:
-    url: jdbc:mariadb://localhost:3306/credhub
+    url: jdbc:mariadb://localhost:3306/credhub_dev
   profiles:
     include: dev
 
