--- a/src/test/resources/application-unit-test.yml
+++ b/src/test/resources/application-unit-test.yml
@@ -6,7 +6,7 @@ auth-server:
   url: https://example.com:8443
 
 encryption:
-  provider: dev_internal
+  provider: internal
   keys:
   - dev-key: D673ACD01DA091B08144FBC8C0B5F524
     active: true
