Add Checkstyle config and task
Based on Google's style, with modifications.

Enables us to run `gradle check` and have style checked.

[#141154037] Configure style guide or checkstyle

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ apply plugin: "org.springframework.boot"
 apply plugin: "org.owasp.dependencycheck"
 apply plugin: "com.github.hierynomus.license"
 apply plugin: "jacoco"
+apply plugin: "checkstyle"
 
 jar {
     baseName = "credhub"
@@ -115,4 +116,8 @@ test {
 
     systemProperties["spring.profiles.active"] = System.getProperty("spring.profiles.active", "unit-test-h2")
     outputs.upToDateWhen { false }
+}
+
+checkstyle {
+    toolVersion "7.6.1"
 }
