Log queries in unit tests
[#139762105] User should be able to read credential ACL based on 'read_acl' operation ACE

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/src/test/resources/application-unit-test.yml
+++ b/src/test/resources/application-unit-test.yml
@@ -36,3 +36,13 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
+        type:
+          descriptor:
+            sql:
+              BasicBinder: TRACE
