Make InfoController read config using @Value
Original problem was that bosh-deployed reported their version as `dev`.

Investigation showed up that part of the problem was default-filling
behaviour in VersionProvider. This uncovered in turn an unexpected
variety of ways in which configuration details were conveyed to the
/info endpoint.

- Replace all 3 environment-value-injecting paths with @Value
  annotations
- Use constructor injection for InfoController
- Rename InfoEndpointTest -> InfoControllerTest
- JUnitize InfoControllerTest
- Move info.app.version="dev" from application.yml to
  application-dev.yml to avoid accidental version reporting
- Remove VersionProvider
- Remove AuthServerProperties

[#144592583] Release 0.7.0 reports version on /info as 'dev'

Signed-off-by: Edie Beer <ebeer@pivotal.io>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,7 @@
+info:
+  app:
+    version: dev
+
 auth_server:
   # Public dummy UAA for local development usage only!
   # Username/password: credhub/password
