Reduce unit-test-postgres connection pool size
After the previous commit, we saw database connection errors related to
the number of users. Preliminary investigation shows that the connection
pool is not shared across all tests; instead there seems to be a
connection pool per-context.

This commit brings the connection pool settings down to the minimum size
that appears to work.

[#144592583] Release 0.7.0 reports version on /info as 'dev'

Signed-off-by: Jacques Chester <jchester@pivotal.io>

--- a/src/test/resources/application-unit-test-postgres.yml
+++ b/src/test/resources/application-unit-test-postgres.yml
@@ -4,8 +4,8 @@ spring:
     password: root
     url: jdbc:postgresql://localhost:5432/credhub_test?user=root
     tomcat:
-      max-active: 20
-      max-idle: 10
+      max-active: 4 # UserSaltMigrationTest ties up more than it ought to
+      max-idle: 0
 
 flyway:
   locations: classpath:/db/migration/common,classpath:/db/migration/postgres
