gradle can read beta version from the environment
[#144592583] Release 0.7.0 reports version on /info as 'dev'

Signed-off-by: Iryna Shustava <ishustava@pivotal.io>

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ apply plugin: "jacoco"
 
 jar {
     baseName = "credhub"
+    if (System.getenv("BETA_VERSION")) {
+        def versionFile = new File("$projectDir/src/main/resources/version")
+        versionFile.write(System.getenv("BETA_VERSION"))
+    }
 }
 sourceCompatibility = 1.8
 
